HelloUltraviolet/Fixtures/RejectedSource/Keys/OrderedDifferentBase/Expected.uv
//! Expected diagnostic metadata for the OrderedDifferentBase rejected-source specimen.

expectedDiagnostic("E-CON-0014", "rule.19.K-Ordered-Base-Err")
